--- a/build.yaml
+++ b/build.yaml
@@ -1,33 +1,28 @@
 # This file describes the keymaps that will be built by the GitHub Actions CI.
-# Each keymap is an "artefact", whose name goes as follows:
+# Most options are defined by CMake arguments, see definitions in keymaps/quacken.keymap.
+# Each keymap is an "artifact", whose name goes as follows:
 #
-#   `quacken_[variant]_[dual_keys]_[options]`
+#   `quacken_[variant]_[layout]_[hold_taps]_[options]`
 #
-# - [variant] (required): specifies the keyboard variant the firmware is meant for
-#   - flex (integrated rp2040 micro-controller, any version number)
+# - [variant]:
+#   - flex (integrated rp2040 micro-controller)
 #   - zero (promicro, you’ll have to update the `board` field to have your actual promicro board)
 #
-# - [dual_keys] (required): specifies the flavor of tap/hold keys used in the keympap
-#   - `ez`: no dual keys, VERY simple config
-#     (recommended for absolute beginners)
-#   - `lt`: layer taps on thumb keys
-#     (recommended for beginner/intermediate users)
-#   - `hrm`: homerow-mods enabled and refactored thumb keys
-#     (recommended for intermediate/advanced users)
-#   - `vim`: same as `hrm`, but with two separate layers instead of `NavNum`:
-#     - VimNav: Vim-like navigation layer (e.g. arrows on HJKL)
-#     - NumRow: numbers on the homerow, shift+numbers on the top row
-#     (recommended for advanced users and Vim addicts)
+# - [layout]: (qwerty when omitted)
+#   - `ergol`     (KB_LAYOUT_ERGOL)
+#   - `azerty`    (KB_LAYOUT_AZERTY)
+#   - `lafayette` (KB_LAYOUT_QWERTY_LAFAYETTE)
+#   - ... probably more to come in the future
 #
-# - [options] (not required):
-#   - `lefty`: space on the left thumb, backspace on the right thumb
-#     (might increse the workload of the left thumb too much)
-#   - `shift`: add shift as a pinky homerow-mod
-#     (useful for shortcuts, NOT MEANT to type text)
-#   - [layout]: change the underlying layout from qwerty to one of:
-#     - `azerty`
-#     - `ergol`
-#     - ... probably more in the future
+# - [hold_taps]: (hrm when omitted)
+#   - `ez`  (HT_NONE): no hold-taps, VERY simple config (recommended for absolute beginners)
+#   - `tt`  (HT_THUMB_TAPS): hold-taps on thumb keys (recommended for beginner/intermediate users)
+#   - `hrm` (HT_HOME_ROW_MODS): homerow-mods enabled and refactored thumb keys (default)
+#
+# - [options]:
+#   - `vim` (VIM_NAVIGATION): use two `VimNav` and `NumRow` layers instead of `NavNum`
+#   - `left` (LEFT_HAND_SPACE): space on the left thumb, backspace on the right thumb
+#   - `shift` (HRM_SHIFT): add shift as a pinky homerow-mod
 
 include:
 
@@ -40,20 +35,31 @@ include:
     # Quacken Zero + SparkFun RP2040, default config
   - board: sparkfun_pro_micro_rp2040
     shield: quacken_zero
-    artifact-name: quacken_zero_hrm
+    artifact-name: quacken_zero
     cmake-args: -DKEYMAP_FILE=/__w/zmk-keyboard-quacken/zmk-keyboard-quacken/keymaps/quacken.keymap
 
     # Quacken Flex, default config
   - board: quacken_flex
-    artifact-name: quacken_flex_hrm
-    cmake-args: >
-      -DKEYMAP_FILE=/__w/zmk-keyboard-quacken/zmk-keyboard-quacken/keymaps/quacken.keymap
-      -DDTS_EXTRA_CPPFLAGS="-DDUAL_KEYS=HOME_ROW_MODS"
+    artifact-name: quacken_flex
+    cmake-args: -DKEYMAP_FILE=/__w/zmk-keyboard-quacken/zmk-keyboard-quacken/keymaps/quacken.keymap
 
-    # Quacken Flex, Vim config
+    # Quacken Flex, Ergol + Vim + hrm_shift config
   - board: quacken_flex
-    artifact-name: quacken_flex_vim_shift
+    artifact-name: quacken_flex_ergol_vim_shift
     cmake-args: >
       -DKEYMAP_FILE=/__w/zmk-keyboard-quacken/zmk-keyboard-quacken/keymaps/quacken.keymap
-      -DDTS_EXTRA_CPPFLAGS="-DHRM_SHIFT -DDUAL_KEYS=HOME_ROW_MODS_VIM"
+      -DDTS_EXTRA_CPPFLAGS="-DKB_LAYOUT_ERGOL;-DVIM_NAVIGATION;-DHRM_SHIFT"
 
+    # Quacken Flex, Azerty + thumb-taps config
+  - board: quacken_flex
+    artifact-name: quacken_flex_azerty_tt
+    cmake-args: >
+      -DKEYMAP_FILE=/__w/zmk-keyboard-quacken/zmk-keyboard-quacken/keymaps/quacken.keymap
+      -DDTS_EXTRA_CPPFLAGS="-DKB_LAYOUT_AZERTY;-DHT_THUMB_TAPS"
+
+    # Quacken Flex, Ergol + Ocsine config
+  - board: quacken_flex
+    artifact-name: quacken_flex_ergol_ocsine
+    cmake-args: >
+      -DKEYMAP_FILE=/__w/zmk-keyboard-quacken/zmk-keyboard-quacken/keymaps/quacken.keymap
+      -DDTS_EXTRA_CPPFLAGS="-DKB_LAYOUT_ERGOL;-DCFG_OCSINE"
