[keymap] Quick fix: replaced tab with esc on vim mode. (#21)

--- a/keymaps/hold_taps.dtsi
+++ b/keymaps/hold_taps.dtsi
@@ -58,46 +58,48 @@
  */
 
 #ifdef VIM_NAVIGATION
-  #define CHOSEN_NAV_LAYER VIM_NAV_LAYER
-  #define CHOSEN_NUM_LAYER NUM_ROW_LAYER
-  #define CHOSEN_HRM_LAYER NUM_ROW_LAYER
+  #define NAV_LAYER VIM_NAV_LAYER
+  #define NUM_LAYER NUM_ROW_LAYER
+  #define HRM_LAYER NUM_ROW_LAYER
+  #define REACH_TAP ESCAPE
 #else
-  #define CHOSEN_NAV_LAYER NUM_NAV_LAYER
-  #define CHOSEN_NUM_LAYER NUM_NAV_LAYER
-  #define CHOSEN_HRM_LAYER FUNCTION_LAYER
+  #define NAV_LAYER NUM_NAV_LAYER
+  #define NUM_LAYER NUM_NAV_LAYER
+  #define HRM_LAYER FUNCTION_LAYER
+  #define REACH_TAP TAB
 #endif
 
 #ifdef LEFT_HAND_SPACE
   #define LEFT_THUMB_LT   &hrm LCTL SPACE
   #define RIGHT_THUMB_LT  &magic_backspace
-  #define LEFT_THUMB_HRM  &lt CHOSEN_NAV_LAYER SPACE
+  #define LEFT_THUMB_HRM  &lt NAV_LAYER SPACE
   #define RIGHT_THUMB_HRM &magic_backspace
 #else
   #define LEFT_THUMB_LT   &mt LCTL BACKSPACE
-  #define RIGHT_THUMB_LT  &lt CHOSEN_NAV_LAYER SPACE
-  #define LEFT_THUMB_HRM  &sc CHOSEN_NAV_LAYER BACKSPACE
-  #define RIGHT_THUMB_HRM &lt CHOSEN_NAV_LAYER SPACE
+  #define RIGHT_THUMB_LT  &lt NAV_LAYER SPACE
+  #define LEFT_THUMB_HRM  &sc NAV_LAYER BACKSPACE
+  #define RIGHT_THUMB_HRM &lt NAV_LAYER SPACE
 #endif
 
 #ifdef HT_NONE
   #define LEFT_THUMB_TUCK    &kp LALT
   #define LEFT_THUMB_HOME    &kp LCTL
   #define LEFT_THUMB_REACH   &kp LGUI
-  #define RIGHT_THUMB_REACH  &mo CHOSEN_NAV_LAYER
+  #define RIGHT_THUMB_REACH  &mo NAV_LAYER
   #define RIGHT_THUMB_HOME   &kp SPACE
   #define RIGHT_THUMB_TUCK   &mo SYMBOLS_LAYER
 #elifdef HT_THUMB_TAPS
   #define LEFT_THUMB_TUCK    &EZ_SK(LSHIFT)
   #define LEFT_THUMB_HOME    LEFT_THUMB_LT
-  #define LEFT_THUMB_REACH   &mt LGUI TAB
+  #define LEFT_THUMB_REACH   &mt LGUI REACH_TAP
   #define RIGHT_THUMB_REACH  &mt LALT ENTER
   #define RIGHT_THUMB_HOME   RIGHT_THUMB_LT
   #define RIGHT_THUMB_TUCK   &EZ_SL(SYMBOLS_LAYER)
 #elifdef HT_HOME_ROW_MODS
   #define LEFT_THUMB_TUCK    &EZ_SK(LSHIFT)
   #define LEFT_THUMB_HOME    LEFT_THUMB_HRM
-  #define LEFT_THUMB_REACH   &sc CHOSEN_HRM_LAYER TAB
-  #define RIGHT_THUMB_REACH  &sc CHOSEN_HRM_LAYER ENTER
+  #define LEFT_THUMB_REACH   &sc HRM_LAYER REACH_TAP
+  #define RIGHT_THUMB_REACH  &sc HRM_LAYER ENTER
   #define RIGHT_THUMB_HOME   RIGHT_THUMB_HRM
   #define RIGHT_THUMB_TUCK   &EZ_SL(SYMBOLS_LAYER)
 #endif
