DTS cleanup (Flex 26.01) (#20)
* DTS cleanup (Flex 26.01)

* Fix code partition size.

* Fix typo, ported the patch from #2.

---------

Co-authored-by: Nuclear Squid <leo@cazenave.cc>

--- a/boards/ergonautes/quacken_flex/quacken_flex.dts
+++ b/boards/ergonautes/quacken_flex/quacken_flex.dts
@@ -213,40 +213,37 @@ rp2040_gpio: &gpio0 {
 };
 
 zephyr_udc0: &usbd {
-  status = "okay";
+    status = "okay";
 };
 
 &flash0 {
-    // XXX: The flash memory used (W25Q128JV) is a 128M-bit memory. I’ll *assume*
-    // that `DT_SIZE_M` is in bytes, but if not we may not fully utilise the
-    // flash memory on board.
-    // (To be fair, worst case senario this is 16M-bit = 2M-byte, and if you
-    // need more than that you’re probably doing something you shouldn’t)
-    reg = <0x10000000 DT_SIZE_M(16)>;
+    // Flex 25.xx: W25Q128JV onboard flash, 128M-bit memory (16MB).
+    // Flex 26.01: W25Q16JVUX onboard flash, 16M-bit memory (2MB).
+    // 2MB is more than enough, so let's use that for all Flex versions.
+    reg = <0x10000000 DT_SIZE_M(2)>;
 
     partitions {
         compatible = "fixed-partitions";
         #address-cells = <1>;
         #size-cells = <1>;
 
-        /* Reserved memory for the second stage bootloader */
+        // Reserved memory for the second-stage bootloader
         second_stage_bootloader: partition@0 {
             reg = <0x00000000 0x100>;
             read-only;
         };
 
-        /*
-         * Usable flash. Starts at 0x100, after the bootloader. The partition
-         * size is 16MB minus the 0x100 bytes taken by the bootloader.
-         */
+        // Usable flash. Starts at 0x100, after the bootloader. The partition
+        // size is 2MB minus the 0x100 bytes taken by the bootloader.
         code_partition: partition@100 {
-            reg = <0x100 (DT_SIZE_M(16) - 0x100)>;
+            reg = <0x100 (DT_SIZE_M(2) - 0x100)>;
             read-only;
         };
     };
 };
 
 &xosc {
-    // XXX: Ensure the communication works even if the XOSC starts up slowly.
+    // Ensure the 12MHz oscillator has enough time to stabilize properly.
+    // Required by Flex 25.xx, should be useless with Flex 26.01.
     startup-delay-multiplier = <64>;
 };
