--- a/boards/ergonautes/quacken_flex/quacken_flex_defconfig
+++ b/boards/ergonautes/quacken_flex/quacken_flex_defconfig
@@ -1,8 +1,9 @@
 CONFIG_CLOCK_CONTROL=y
 CONFIG_SYS_CLOCK_HW_CYCLES_PER_SEC=125000000
 
-# Enable USB CDC ACM logging for debugging
+# Enable USB CDC ACM logging for debugging (to be removed?)
 # CONFIG_ZMK_USB_LOGGING=y
+# CONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=3000
 
 # Enable reset by default
 CONFIG_RESET=y
@@ -13,6 +14,7 @@ CONFIG_USE_DT_CODE_PARTITION=y
 # Output UF2 by default, native bootloader supports it.
 CONFIG_BUILD_OUTPUT_UF2=y
 
+# USB HID
 CONFIG_ZMK_USB=y
 
 # I2C key scan
@@ -25,6 +27,3 @@ CONFIG_ZMK_KSCAN_DIRECT_POLLING=y
 # Rotary encoder support
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
-
-
-CONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=3000
