--- a/keymaps/extra_layers/azerty.dtsi
+++ b/keymaps/extra_layers/azerty.dtsi
@@ -6,11 +6,38 @@
     &kp TAB    &kp Q  &kp W  &kp E  &kp R  &kp T        &kp Y  &kp U  &kp I     &kp O   &kp P      &kp BACKSPACE
     &kp ESCAPE HRM_A  HRM_S  HRM_D  HRM_F  &kp G        &kp H  HRM_J  HRM_K     HRM_L   HRM_SEMI   &EZ_SL(DK_LAYER)
     &kp LSHIFT &kp Z  &kp X  &kp C  &kp V  &kp B        &kp N  &kp M  &kp COMMA &kp DOT &kp FSLH   &kp RSHIFT
-    LEFT_THUMB_TUCK  LEFT_THUMB_HOME  LEFT_THUMB_REACH    RIGHT_THUMB_REACH  RIGHT_THUMB_HOME  RIGHT_THUMB_TUCK
+            LTHUMB_TUCK  LTHUMB_HOME  LTHUMB_REACH    RTHUMB_REACH  RTHUMB_HOME  RTHUMB_TUCK
   >;
 };
 
 / {
+  macros {
+    kpc: circumflex {
+      compatible = "zmk,behavior-macro-one-param";
+      #binding-cells = <1>;
+      tap-ms = <0>;
+      wait-ms = <0>;
+      bindings
+        = <&macro_tap &kp LBKT>
+        , <&macro_pause_for_release>
+        , <&macro_param_1to1>
+        , <&kp MACRO_PLACEHOLDER>
+        ;
+    };
+    spc: space_after_dk {
+      compatible = "zmk,behavior-macro-one-param";
+      #binding-cells = <1>;
+      tap-ms = <0>;
+      wait-ms = <0>;
+      bindings
+        = <&macro_param_1to1>
+        , <&kp MACRO_PLACEHOLDER>
+        , <&macro_pause_for_release>
+        , <&macro_tap &kp SPACE>
+        ;
+    };
+  };
+
   // Extra layers defined specifically for this keymap, appended to the base keymap.
   keymap {
     compatible = "zmk,keymap";
