--- a/keymaps/extra_layers/ergol_hummingbird.dtsi
+++ b/keymaps/extra_layers/ergol_hummingbird.dtsi
@@ -1,15 +1,15 @@
-#define ODK_LAYER       EXTRA_LAYERS_START_INDEX
-#define ODK_SHIFT_LAYER EXTRA_LAYERS_START_INDEX + 1
-#define EXTRA_SYM_LAYER EXTRA_LAYERS_START_INDEX + 2
+#define ODK_LAYER        EXTRA_LAYERS_START_INDEX
+#define ODK_SHIFT_LAYER (EXTRA_LAYERS_START_INDEX + 1)
+#define EXTRA_SYM_LAYER (EXTRA_LAYERS_START_INDEX + 2)
 
 // Override the base layer to replace Ergo‑L’s OneDeadKey
 &base_layer {
   display-name = "Base";
   bindings = <
-    &kp TAB    &kp Q  &kp W  &kp E  &kp R  &kp T        &kp N  &kp U  &kp I     &dead_key &kp P      &kp BACKSPACE
-    &kp ESCAPE HRM_A  HRM_S  HRM_D  HRM_F  &kp G        &kp H  HRM_J  HRM_K     HRM_L     HRM_SEMI   &kp ENTER
-    &kp LSHIFT &kp Z  &kp X  &kp C  &kp V  &kp B        &kp Y  &kp M  &kp COMMA &kp DOT   &kp FSLH   &kp RSHIFT
-    LEFT_THUMB_TUCK  LEFT_THUMB_HOME  LEFT_THUMB_REACH    RIGHT_THUMB_REACH  RIGHT_THUMB_HOME  RIGHT_THUMB_TUCK
+    &kp Z  &kp Q  &kp W  &kp E  &kp R  &kp T        &kp N  &kp U  &kp I     &dead_key &kp P     &kp FSLH
+    &kp Z  HRM_A  HRM_S  HRM_D  HRM_F  &kp G        &kp H  HRM_J  HRM_K     HRM_L     HRM_SEMI  &kp FSLH
+    &none  &kp Q  &kp X  &kp C  &kp V  &kp B        &kp Y  &kp M  &kp COMMA &kp DOT   &kp P     &none
+        LTHUMB_TUCK  LTHUMB_HOME  LTHUMB_REACH    RTHUMB_REACH  RTHUMB_HOME  RTHUMB_TUCK
   >;
 };
 
@@ -19,8 +19,8 @@
   bindings = <
     &trans  S_CARET S_LT    S_GT    S_DLLR  S_PRCNT       S_AT    S_AMPS  S_STAR  S_SQT   S_GRAVE  &trans
     &trans  S_LBRC  S_LPAR  S_RPAR  S_RBRC  S_EQUAL       S_BSLH  S_PLUS  S_MINUS S_FSLH  S_DQT    &trans
-    &trans  S_TILDE S_LBKT  S_RBKT  S_UNDER S_HASH        S_PIPE  S_EXCL  S_SEMI  S_COLON S_QMARK  &trans
-    &EZ_SL(EXTRA_SYM_LAYER)  &kp SPACE  &EZ_SL(NUM_ROW_LAYER)     &trans  &kp RALT  &trans
+    &trans  S_CARET S_LBKT  S_RBKT  S_UNDER S_HASH        S_PIPE  S_EXCL  S_SEMI  S_COLON S_GRAVE  &trans
+    SYM_NUM_LAYER  &kp SPACE  &sc EXTRA_SYM_LAYER ENTER     &trans  &kp RALT  &trans
   >;
 };
 
@@ -74,7 +74,7 @@
       bindings = <
         &trans  &odk Q  &odk W  &odk E  &odk R  &kp Z      &odk N  &kp Y    &odk I     &odk O   &odk P    &trans
         &trans  &odk A  &odk S  &odk D  &odk F  &kp B      &odk H  &odk J   &odk K     &odk L   &odk SEMI &trans
-        &trans  &trans  &odk Z  &odk C  &odk V  &trans     &trans  &kp FSLH &odk COMMA &odk DOT &trans    &trans
+        &trans  &odk Q  &odk Z  &odk C  &odk V  &trans     &trans  &kp FSLH &odk COMMA &odk DOT &odk P    &trans
            &EZ_SL(ODK_SHIFT_LAYER)  &odk SPACE  &trans     &trans  &odk SPACE  &trans
       >;
     };
@@ -84,7 +84,7 @@
       bindings = <
         &trans   &odks Q  &odks W  &odks E  &odks R  &kp LS(Z)      &odks N  &kp LS(Y)    &odks I     &odks O   &odks P    &trans
         &trans   &odks A  &odks S  &odks D  &odks F  &kp LS(B)      &odks H  &odks J      &odks K     &odks L   &odks SEMI &trans
-        &trans   &trans   &odks Z  &odks C  &odks V  &trans         &trans   &kp LS(FSLH) &odks COMMA &odks DOT &trans     &trans
+        &trans   &odks Q  &odks Z  &odks C  &odks V  &trans         &trans   &kp LS(FSLH) &odks COMMA &odks DOT &odks P    &trans
                             &trans   &odks SPACE  &trans      &trans   &odks SPACE  &trans
       >;
     };
