--- a/keymaps/hold_taps.dtsi
+++ b/keymaps/hold_taps.dtsi
@@ -109,14 +109,14 @@
   #define LTHUMB_REACH  &mt LGUI REACH_TAP
   #define RTHUMB_REACH  &mt LALT ENTER
   #define RTHUMB_HOME   RTHUMB_TT
-  #define RTHUMB_TUCK   &EZ_SL(SYMBOLS_LAYER)
+  #define RTHUMB_TUCK   &sym_shift_altgr
 #elifdef HT_HOME_ROW_MODS
   #define LTHUMB_TUCK   &EZ_SK(LSHIFT)
   #define LTHUMB_HOME   LTHUMB_HRM
   #define LTHUMB_REACH  &sc HRM_LAYER REACH_TAP
   #define RTHUMB_REACH  &sc HRM_LAYER ENTER
   #define RTHUMB_HOME   RTHUMB_HRM
-  #define RTHUMB_TUCK   &EZ_SL(SYMBOLS_LAYER)
+  #define RTHUMB_TUCK   &sym_shift_altgr
 #elifdef HT_COMPACT
   #define LTHUMB_TUCK   &mt LSHIFT REACH_TAP
   #define LTHUMB_HOME   LTHUMB_S34
@@ -145,11 +145,11 @@
 
 #define EZ_SL(layer) bsl (layer) (layer)
 #define EZ_SK(mod)   bsk (mod) (mod)
-&sl{ ignore-modifiers; }; // keep one-shot-mods when chained into a one-shot-layer
-&sk{ quick-release; }; // must have (lots of false positives otherwise)
+&sl { ignore-modifiers; }; // keep one-shot-mods when chained into a one-shot-layer
+&sk { quick-release; };    // must-have! (lots of false positives otherwise)
 
 // add our common tap-hold parametesr to the default options
-&mt{
+&mt {
   tapping-term-ms = <SHORT_TAPPING_TERM>;
   quick-tap-ms = <QUICK_TAP>;
 };
@@ -210,27 +210,61 @@
       bindings = <&kp>, <&osm>;
     };
 
-    //  Mod-morphs to restore Shift + Space and Ctrl + backspace for certain keympas
+    // mod-morphs to restore Shift+Space and Ctrl+Backspace for certain keymaps
     magic_backspace: magic_backspace {
       compatible = "zmk,behavior-mod-morph";
       #binding-cells = <0>;
       bindings = <&sc NAV_LAYER BACKSPACE>, <&lt NAV_LAYER SPACE>;
-      mods = <MOD_LSFT>;
+      mods      = <MOD_LSFT>;
       keep-mods = <MOD_LSFT>;
     };
     magic_space: magic_space {
       compatible = "zmk,behavior-mod-morph";
       #binding-cells = <0>;
       bindings = <&lt NAV_LAYER SPACE>, <&sc NAV_LAYER BACKSPACE>;
-      mods = <MOD_LCTL>;
+      mods      = <MOD_LCTL>;
       keep-mods = <MOD_LCTL>;
     };
     magic_backspace_34_keys: magic_backspace_34_keys {
       compatible = "zmk,behavior-mod-morph";
       #binding-cells = <0>;
       bindings = <&sc HRM_LAYER BACKSPACE>, <&lt HRM_LAYER SPACE>;
-      mods = <MOD_LSFT>;
+      mods      = <MOD_LSFT>;
       keep-mods = <MOD_LSFT>;
     };
+  };
+
+  // AltGr support
+
+  // Sym becomes Shift+AltGr when combined with exclusively Shift
+  sym_shift_altgr: sym_shift_altgr {
+    compatible = "zmk,behavior-mod-morph";
+    #binding-cells = <0>;
+    bindings = <&sym_shift_altgr_inner>, <&EZ_SL(SYMBOLS_LAYER)>;
+    mods      = <(MOD_LCTL|MOD_RCTL|MOD_LGUI|MOD_RGUI|MOD_LALT)>;
+    keep-mods = <(MOD_LCTL|MOD_RCTL|MOD_LGUI|MOD_RGUI|MOD_LALT)>;
+  };
+  sym_shift_altgr_inner: sym_shift_altgr_inner {
+    compatible = "zmk,behavior-mod-morph";
+    #binding-cells = <0>;
+    bindings = <&EZ_SL(SYMBOLS_LAYER)>, <&EZ_SK(RALT)>;
+    mods      = <(MOD_LSFT|MOD_RSFT)>;
+    keep-mods = <(MOD_LSFT|MOD_RSFT)>;
+  };
+
+  // go to layer $1 and press key $2
+  lkp: goto_layer_then_keypress {
+    compatible = "zmk,behavior-macro-two-param";
+    wait-ms = <0>;
+    tap-ms = <0>;
+    #binding-cells = <2>;
+    bindings =
+      <&macro_param_1to1>,
+      <&macro_tap &to MACRO_PLACEHOLDER>,
+      <&macro_param_2to1>,
+      <&macro_press &EZ_SK(MACRO_PLACEHOLDER)>,
+      <&macro_pause_for_release>,
+      <&macro_param_2to1>,
+      <&macro_release &EZ_SK(MACRO_PLACEHOLDER)>;
   };
 };
