--- a/keymaps/hold_taps.dtsi
+++ b/keymaps/hold_taps.dtsi
@@ -145,6 +145,7 @@
 
 #define EZ_SL(layer) bsl (layer) (layer)
 #define EZ_SK(mod)   bsk (mod) (mod)
+#define EZ_LSK(mod)  lbsk (mod) (mod)
 &sl { ignore-modifiers; }; // keep one-shot-mods when chained into a one-shot-layer
 &sk { quick-release; };    // must-have! (lots of false positives otherwise)
 
@@ -234,6 +235,7 @@
     };
   };
 
+  // XXX this whole AltGr section should probably be inside the `behaviors` branch
   // AltGr support
 
   // Sym becomes Shift+AltGr when combined with exclusively Shift
@@ -252,19 +254,36 @@
     keep-mods = <(MOD_LSFT|MOD_RSFT)>;
   };
 
-  // go to layer $1 and press key $2
+  // go to base layer and press mod
+  
   lkp: goto_layer_then_keypress {
-    compatible = "zmk,behavior-macro-two-param";
+    compatible = "zmk,behavior-macro-one-param";
     wait-ms = <0>;
     tap-ms = <0>;
-    #binding-cells = <2>;
+    #binding-cells = <1>;
     bindings =
+      <&macro_tap &to BASE_LAYER>,
       <&macro_param_1to1>,
-      <&macro_tap &to MACRO_PLACEHOLDER>,
-      <&macro_param_2to1>,
-      <&macro_press &EZ_SK(MACRO_PLACEHOLDER)>,
+      <&macro_press &kp MACRO_PLACEHOLDER>,
       <&macro_pause_for_release>,
-      <&macro_param_2to1>,
-      <&macro_release &EZ_SK(MACRO_PLACEHOLDER)>;
+      <&macro_param_1to1>,
+      <&macro_release &kp MACRO_PLACEHOLDER>;
+  }; 
+  losm: goto_layer_then_osm {
+    compatible = "zmk,behavior-macro-one-param";
+    wait-ms = <0>;
+    tap-ms = <0>;
+    #binding-cells = <1>;
+    bindings =
+      <&macro_tap &to BASE_LAYER>,
+      <&macro_param_1to1>,
+      <&macro_tap &sk MACRO_PLACEHOLDER>;
+  };
+  lbsk: bsk_on_other_layer {
+    compatible = "zmk,behavior-hold-tap";
+    #binding-cells = <2>;
+    tapping-term-ms = <TAPPING_TERM>;
+    flavor = "tap-preferred";
+    bindings = <&lkp>, <&losm>;
   };
 };
