--- a/keymaps/hold_taps.dtsi
+++ b/keymaps/hold_taps.dtsi
@@ -10,15 +10,16 @@
 // Human-readable constants for the layer indexes.
 // Make sure to update this table if you edit the order / number of layers in the keymap.
 #define BASE_LAYER     0
-#define SYMBOLS_LAYER  1
-#define VIM_NAV_LAYER  2
-#define NUM_NAV_LAYER  3
-#define NUM_ROW_LAYER  4
-#define FUNCTION_LAYER 5
+#define NUM_LOCK_LAYER 1
+#define SYMBOLS_LAYER  2
+#define VIM_NAV_LAYER  3
+#define NUM_NAV_LAYER  4
+#define NUM_ROW_LAYER  5
+#define FUNCTION_LAYER 6
 
 // Potentially used by other keymaps deriving from this one, who may add extra layers.
 // Make sure this stays equal to <index_of_last_layer> + 1
-#define EXTRA_LAYERS_START_INDEX 6
+#define EXTRA_LAYERS_START_INDEX 7
 
 
 /**
@@ -143,9 +144,9 @@
 #define QUICK_TAP 200
 #endif
 
-#define EZ_SL(layer) bsl (layer) (layer)
-#define EZ_SK(mod)   bsk (mod) (mod)
-#define EZ_LSK(mod)  lbsk (mod) (mod)
+#define EZ_SL(layer)  bsl (layer) (layer)
+#define EZ_SK(mod)    bsk (mod) (mod)
+#define EZ_LSK(mod)   lbsk (mod) (mod)
 &sl { ignore-modifiers; }; // keep one-shot-mods when chained into a one-shot-layer
 &sk { quick-release; };    // must-have! (lots of false positives otherwise)
 
